message(STATUS "---------------------------------------------------------------")
message(STATUS "[ 🛠️ ] Building Examples")
message(STATUS "---------------------------------------------------------------")

add_subdirectory(ff)

add_subdirectory(fps)

add_subdirectory(simple)

add_subdirectory(spacers)
