AUTOMAKE_OPTIONS = 1.4

bin_PROGRAMS = guichanffdemo
guichanffdemo_SOURCES = 		\
	include/ffcharacterchooser.hpp 	\
	src/ffcharacterchooser.cpp	\
	include/ffcontainer.hpp		\
	src/ffcontainer.cpp		\
	include/ffdemo.hpp		\
	src/ffdemo.cpp			\
	include/fflistbox.hpp		\
	src/fflistbox.cpp		\
	include/ffscrollarea.hpp	\
	src/ffscrollarea.cpp		\
	src/guichanffdemo.cpp

guichanffdemo_LDADD = @GUICHANFFDEMO_LIBS@


