SUBDIRS = @GUICHAN_EXTRADIRS@

libguichanincludedir = $(includedir)/guichan

libguichaninclude_HEADERS =	\
	actionlistener.hpp	\
	allegro.hpp		\
	cliprectangle.hpp	\
	color.hpp		\
	container.hpp		\
	focushandler.hpp	\
	font.hpp		\
	graphics.hpp		\
	gui.hpp			\
	image.hpp		\
	imagemousetype.hpp	\
	input.hpp		\
	key.hpp			\
	keyinput.hpp		\
	keylistener.hpp		\
	mouseinput.hpp		\
	mouselistener.hpp	\
	mousetype.hpp		\
	rectangle.hpp		\
	sdl.hpp			\
	widget.hpp		
