SUBDIRS = @GUICHAN_EXTRADIRS@ widgets

libguichanincludedir = $(includedir)/guichan

libguichaninclude_HEADERS =	\
	actionlistener.hpp	\
	allegro.hpp		\
	basiccontainer.hpp	\
	cliprectangle.hpp	\
	color.hpp		\
	container.hpp		\
	defaultfont.hpp		\
	exception.hpp		\
	focushandler.hpp	\
	font.hpp		\
	graphics.hpp		\
	gui.hpp			\
	image.hpp		\
	imagefont.hpp		\
	imageloader.hpp		\
	imagemousetype.hpp	\
	input.hpp		\
	key.hpp			\
	keyinput.hpp		\
	keylistener.hpp		\
	listmodel.hpp		\
	mouseinput.hpp		\
	mouselistener.hpp	\
	mousetype.hpp		\
	opengl.hpp		\
	rectangle.hpp		\
	sdl.hpp			\
	widget.hpp		\
	x.hpp			
