SUBDIRS = @GUICHAN_EXTRADIRS@ widgets

libguichanincludedir = $(includedir)/guichan

libguichaninclude_HEADERS =	\
	actionlistener.hpp	\
	allegro.hpp		\
	basiccontainer.hpp	\
	cliprectangle.hpp	\
	color.hpp		\
	defaultfont.hpp		\
	exception.hpp		\
	focushandler.hpp	\
	font.hpp		\
	glut.hpp		\
	graphics.hpp		\
	gui.hpp			\
	image.hpp		\
	imagefont.hpp		\
	imageloader.hpp		\
	input.hpp		\
	key.hpp			\
	keyinput.hpp		\
	keylistener.hpp		\
	listmodel.hpp		\
	mouseinput.hpp		\
	mouselistener.hpp	\
	opengl.hpp		\
	platform.hpp		\
	rectangle.hpp		\
	sdl.hpp			\
	widget.hpp		\
	x.hpp			
