lib_LTLIBRARIES = libguichan_allegro.la

INCLUDES = -I$(top_srcdir)/include

libguichan_allegro_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) -release $(LT_RELEASE)

libguichan_allegro_la_SOURCES =		\
		allegro.cpp		\
		allegrofont.cpp		\
		allegrographics.cpp	\
		allegroimage.cpp	\
		allegroimageloader.cpp	\
		allegroinput.cpp