lib_LTLIBRARIES = libfifechan_allegro.la

INCLUDES = -I$(top_srcdir)/include

libfifechan_allegro_la_LDFLAGS = -no-undefined -release $(LT_RELEASE) -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)

libfifechan_allegro_la_SOURCES =		\
		allegro.cpp		\
		allegrofont.cpp		\
		allegrographics.cpp	\
		allegroimage.cpp	\
		allegroimageloader.cpp	\
		allegroinput.cpp